-Añadida funcion tookit en algunos botones para mostrar mensaje. -Añadida confirmacion de eliminar cualquier tabla,dieta,seguimiento,usuario,clase o ejercicio.

--- a/src/app/componentes/clases/administrar-clases/administrar-clases.component.html
+++ b/src/app/componentes/clases/administrar-clases/administrar-clases.component.html
@@ -69,7 +69,7 @@
                     <td class="col"> {{clase.alumnos.length}} / {{clase.maxAlumnos}}</td>
 
                     <td class="col text-center">
-                        <button class="btn botonCrearClase mx-auto" (click)="borrarClase(clase._id)">
+                        <button class="btn botonCrearClase mx-auto"   (click)="confirmarEliminacionClase(clase._id)">
                             <i class="fas fa-trash-alt"></i>
                         </button>
                     </td>
