--- a/src/app/componentes/dietas/visualizar-dietas/visualizar-dietas.component.html
+++ b/src/app/componentes/dietas/visualizar-dietas/visualizar-dietas.component.html
@@ -37,13 +37,9 @@
         </div>
 
         <div class="col-sm-12 p-2 divEliminar" >
-            <button type="submit" class="btn botonEliminarDieta col-sm-12 col-md-2 ml-auto" [disabled]="!checkActivado" (click)="eliminarDieta()">
+            <button type="submit" class="btn botonEliminarDieta col-sm-12 col-md-2 " (click)="confirmarEliminacion()">
                 <i class="fas fa-trash-alt pr-1"></i> Eliminar dieta
             </button>
-            <div class="custom-control custom-checkbox col-sm-12 col-md-6 eliminarCheck">
-                <input type="checkbox" class="custom-control-input " id="eliminar" (click)="checkEliminar()">
-                <label class="custom-control-label" for="eliminar">¿Seguro que quieres eliminar la dieta?</label>
-            </div>
         </div>
     </div>
 </section>
