--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,7 +1,8 @@
 <section>
     <div class="col-sm-7">
         <div class="row">
-            <div class="col-sm-12 col-md tarjeta row "  [routerLink]="['/tablas']"  *ngIf="(nivelAcceso == '1') || (nivelAcceso == '2') || (nivelAcceso == '5')  || (nivelAcceso == '6')  || (nivelAcceso == '8')">
+            <div class="col-sm-12 col-md tarjeta row "  [routerLink]="['/tablas']"  *ngIf="(nivelAcceso == '1') || (nivelAcceso == '2') || 
+            (nivelAcceso == '5')  || (nivelAcceso == '6')  || (nivelAcceso == '8')">
                 <img src="/assets/imagenes/tablas.png" alt="Acceso a tablas">
                 <h3 class="col-sm-12">Tablas</h3>
             </div>
