--- a/src/app/componentes/usuarios/datos-usuario/datos-usuario.component.html
+++ b/src/app/componentes/usuarios/datos-usuario/datos-usuario.component.html
@@ -72,13 +72,10 @@
             </div>
         </div>
         <div class="col-sm-12 p-2 divEliminar" *ngIf="usuarioLogeado.acceso == '1'">
-            <button type="submit" class="btn botonEliminarUsuario col-sm-12 col-md-2 ml-auto" [disabled]="!checkActivado" (click)="eliminarUsuario()">
+            <button type="submit" class="btn botonEliminarUsuario col-sm-12 col-md-2 "  (click)="confirmarEliminacion()">
                 <i class="fas fa-trash-alt pr-1"></i> Eliminar Usuario
             </button>
-            <div class="custom-control custom-checkbox col-sm-12 col-md-6 eliminarCheck">
-                <input type="checkbox" class="custom-control-input " id="eliminar" (click)="checkEliminar()">
-                <label class="custom-control-label" for="eliminar">¿Seguro que quieres eliminar al usuario?</label>
-            </div>
+            
         </div>
     </div>
 </section>
