--- a/src/app/componentes/tablas/crear-tablas/crear-tablas.component.scss
+++ b/src/app/componentes/tablas/crear-tablas/crear-tablas.component.scss
@@ -32,6 +32,11 @@ th {
     background-color: red;
     margin-bottom: 5px;
 }
+.botonCopiarTabla{
+    background-color: red;
+    margin-bottom: 5px;
+    width: 22em;
+}
 tr th,tr td {
     padding-left: 3px;
 }
@@ -53,5 +58,8 @@ tr th,tr td {
     }
     .labelNombreTabla {
         padding-right: 15px;
+    }
+    .botonCopiarTabla{
+        margin-left: 15px;
     }
 }
