--- a/src/app/componentes/tablas/visualizar-tablas/visualizar-tablas.component.html
+++ b/src/app/componentes/tablas/visualizar-tablas/visualizar-tablas.component.html
@@ -38,6 +38,9 @@
             <button type="submit" class="btn botonEliminarTabla col-sm-12 col-md-2 " (click)="confirmarEliminacion()">
                 <i class="fas fa-trash-alt pr-1"></i> Eliminar tabla
             </button>
+            <div class="compartirTabla text-center">
+                IdTabla para compartir: <br>{{idTabla}}
+            </div>
         </div>
     </div>
 </section>
